--- a/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/DockerFile
+++ b/Assignments/Team Leader- Priyadharshini.M/Assignment 4/Job Portal/DockerFile
@@ -1,7 +1,7 @@
 FROM python:3.10.6
-COPY requirements.txt ./app/requirements.txt
-WORKDIR /app
+COPY requirements.txt ./requirements.txt
+WORKDIR /main
 RUN pip install -r requirements.txt
 COPY . .
 EXPOSE 5000
-CMD ["python","./app.py"]
+CMD ["python","./main.py"]
